Changed page name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Here's Why M is Cool</h1>
+    <h1>The Amateur's Hour</h1>
     <div>
         *Site Under Construction*
     </div>
